# tandem

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: personas_20.jsonl
data/beauty_5core/: test_items_200.jsonl
figures/: plotstyle.py  table1_hypothesis_summary.tex
paper/: Makefile  PREVIEW.md  README.md  main.tex  references.bib
research/: cultural_resources.md  lit_review.md  literature_evidence.md  overlay_spec.md  protocol_spec.md
results/: api_demo.txt  baseline_chat_rec.jsonl  baseline_chat_rec_ranking.jsonl  baseline_p5_zero.jsonl  baseline_p5_zero_ranking.jsonl  cell_A_ranking.jsonl  cell_A_simulator.jsonl  cell_B_ranking.jsonl  cell_B_simulator.jsonl  cell_C_ranking.jsonl  cell_C_simulator.jsonl  cell_D_ranking.jsonl  cell_D_simulator.jsonl  cell_E_ranking.jsonl  cell_E_simulator.jsonl  cold_start_baseline_chat_rec.jsonl  cold_start_baseline_chat_rec_ranking.jsonl  cold_start_baseline_p5_zero.jsonl  cold_start_baseline_p5_zero_ranking.jsonl  cold_start_baseline_popularity_ranking.jsonl  cold_start_baselines_summary.json  cold_start_ranking.jsonl  cold_start_simulator.jsonl  cold_start_summary.json  hypothesis_results.json  naija_classifier.joblib  qualitative_examples.json  qualitative_examples.md  task_a_metrics.json  task_b_metrics.json
src/agents/: recommender.py  recommender_agentic.py  run_all_cells.py  simulator.py  smoke.py
src/api/: __init__.py  main.py
src/baselines/: __init__.py  __main__.py
src/data/: beauty.py  personas.py
src/eval/: classifier.py  cold_start.py  cold_start_baselines.py  hypotheses.py  plot.py  qualitative_examples.py  run_all.py  task_a_metrics.py  task_b_metrics.py
src/llm/: cache.py  client.py
src/overlay/: __init__.py  grounding.py  linguistic.py  preferences.py
